--- a/nuevologin.html
+++ b/nuevologin.html
@@ -3,34 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ejercicio</title>
-    <link href="/css/estilologin.css" rel="stylesheet" type="text/css">
+    <title>Login</title>
+    <link href="css/estilologin.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 
 <form class="cuadro">
 <div class="container">
-    <h1>Ingresa a nuestro sitio</h1 >
+
+    <img src="img/login.png" alt="login" id="imglog">
+    <h1>Regístrate</h1 >
  
 <label name="primboton" class="dato">Usuario:</label>
 
 <input type="text" name="primboton" id="name" placeholder="Ingrese su usuario" class="campo">
-<div id="erroruser"></div>
+<div id="erroruser" class="error"></div>
 
 <label name="segboton" class="dato">Contraseña:</label>
 <input type="password" name="segboton" id="pass" placeholder="Ingrese contraseña" class="campo">
-<div id="errorpass"></div>
+<div id="errorpass" class="error"></div>
 
-<label name="terboton" class="dato">Número:</label>
+<!-- <label name="terboton" class="dato">Número:</label>
 
 <input type="num" name="terboton" id="num" placeholder="Ingrese su número" class="campo">
-<div id="errornum"></div>
+<div id="errornum"></div> -->
+
+<div id="checkbox">
+    <label name="remember-me">
+    <input type="checkbox" value="remember-me">
+    Recuérdame </label>
+</div>
 
 
 <button class="boton"  type="button" id="boton" onclick="enviar()" >Enviar</button>
 </form>
 
 
-<script src="/js/login.js"></script>
+<script src="js/log.js"></script>
 </body>
 </html>
