--- a/login.html
+++ b/login.html
@@ -30,7 +30,7 @@
 </div>
 
 
-<button class="boton"  type="button" id="boton" onclick="enviar()" >Enviar</button>
+<button class="boton"  type="button" id="boton" onclick="enviar(); parrafo()" >Enviar</button>
 </form>
 
 
