--- a/products.html
+++ b/products.html
@@ -78,6 +78,7 @@
 
       <div class="container">
         <div class="row">
+          <a href="product-info.html" class="card mb-4 shadow-sm custom-card"></a>
           <div class="list-group" id="prod-list-container">
           </div>
         </div>
