--- a/categories.html
+++ b/categories.html
@@ -21,9 +21,10 @@
         <a class="py-2 d-none d-md-inline-block" href="categories.html">Categorías</a>
         <a class="py-2 d-none d-md-inline-block" href="products.html">Productos</a>
         <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
-        <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
         <a class="py-2 d-none d-md-inline-block btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#" id="user"></a>
         <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+          <a class="dropdown-item" id="" href="my-profile.html">Mi perfil</a>
+          <a class="dropdown-item" id="" href="cart.html">Ver mi carrito</a>
           <a class="dropdown-item" id="salir" href="#">Salir</a>
         </div>
       </div>
