--- a/product-info.html
+++ b/product-info.html
@@ -28,11 +28,12 @@
       <a class="py-2 d-none d-md-inline-block" href="categories.html">Categorías</a>
       <a class="py-2 d-none d-md-inline-block" href="products.html">Productos</a>
       <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
-      <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
       <a class="py-2 d-none d-md-inline-block btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#" id="user"></a>
-        <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-          <a class="dropdown-item" id="salir" href="#">Salir</a>
-        </div>
+      <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+        <a class="dropdown-item" id="" href="my-profile.html">Mi perfil</a>
+        <a class="dropdown-item" id="" href="cart.html">Ver mi carrito</a>
+        <a class="dropdown-item" id="salir" href="#">Salir</a>
+      </div>
     </div>
   </nav>
 
@@ -68,17 +69,28 @@
       </dd>
     </dl>
 
+    <hr>
+    <br>
+
+    <div class="container">
+      <div class="row mx-auto" style="width: 350px;">
+        <h3>Productos relacionados</h3>
+      </div>
+      <div class="card-deck my-5" id="relatedprod">
+      </div>
+    </div>
+
+    <hr>
+    <br>
     <div class="row mx-auto" style="width: 200px;">
       <h3>Comentarios</h3>
     </div>
-    <hr class="my-3">
+    
 
     <div class="container">
       <div class="row" id="comentarios">
       </div>
     </div>
-
-
 
     <div class="container p-5">
       <div class="container">
