Quinta entrega avance

--- a/cart.html
+++ b/cart.html
@@ -49,12 +49,82 @@
     </div>
   </nav>
   <div class="container p-5">
-    <div class="alert alert-danger" role="alert" style="position: relative; width:auto; top: 0;">
+
+    <div class="row">
+        <div class="col-2">
+           <img src="" alt="foto">
+        </div>
+        <div class="col">
+          <h4>Name prod.</h4>
+            <span class="col-3">
+              <small class="text-muted">description</small>
+            </span>
+            <span class="col-3">
+               <small class="text-muted">Cant. prod.</small>
+             </span>
+          </div>
+        <div class="col-2">
+         <h4>Valor unitario</h4>
+        </div>
+        <div class="col-2"> 
+          <h4>Total</h4>
+        </div>
+    </div>
+
+    <div class="row mt-5">
+      <div class="col-8">
+        <div>
+          <label class="col-8">Código de descuento</label>
+          <input type="text" id="descuento" placeholder="Introduzca su código">
+        </div>
+        <div class="mt-1">
+          <h5>Método de pago</h5>
+          <br>
+          <input type="radio"> Visa 
+          <br>
+          <input type="radio"> Mastercard 
+          <br>
+          <input type="radio">  Paypal 
+        </div>
+      </div>
+        <div class="col-4">
+                <span class="col-12">Subtotal</span>
+
+                <span class="col-12">$$$</span>
+          <div>
+            <div class="col-12">TOTAL</div>
+          </div>
+        </div>
+      <div class="col-8"></div>
+      <div class="col-4">
+        <button type="submit" class=" btn btn-danger">FINALIZAR COMPRA</button>
+      </div>
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <!-- <div class="alert alert-danger" role="alert" style="position: relative; width:auto; top: 0;">
       <h4 class="alert-heading">¡A trabajar! :)</h4>
       <p>Esta sección corresponde a: Entrega 5 (Fecha de entrega: 11/10/2020) y Entrega 6 (Fecha de entrega: 25/10/2020).</p>
       <hr>
       <p class="mb-0">Para saber qué debes hacer, fijate en la actividad en CREA correspondiente a esta entrega.</p>
-    </div>
+    </div> -->
   </div>
   <div id="spinner-wrapper">
     <div class="lds-ring">
