Quinta entrega 3er commit

--- a/cart.html
+++ b/cart.html
@@ -55,21 +55,21 @@
 </div>
 
   <div class="container list-group py-5" >
-<div class="list-group-item" id="cartContainer"></div>
+<div class="container list-group-item bg-light" id="cartContainer"></div>
 
-<div class="list-group-item">
+<div class="list-group-item bg-light">
 <div class="row mt-5">
 
-  <div class="col-8">
+  <div class="col-8 bg-light">
     <div class="list-group-item">
-      <h5>Descuentos</h5>
+      <h4>Descuentos</h4>
       <span>
       <label class="col-8 text-muted">Código de descuento</label>
       </span>
       <input type="text" id="descuento" placeholder="Introduzca su código">
     </div>
 
-         <div class="">
+         <div class="bg-light">
            <div class="list-group-item">
              <h5>Método de pago</h5>
              
@@ -86,6 +86,7 @@
 
 
     <div class="col-4 list-group-item">
+      <h4 style="text-align: center;">Resumen</h4>
           <div class="list-group-item">
             <div class="col-4">Subtotal</div>
             <span>$$$</span>
@@ -93,14 +94,11 @@
       <div>
         <div class="col-12 list-group-item">TOTAL</div>
       </div>
+      <div class="py-2">
+        <button type="submit" class=" btn btn-danger">FINALIZAR COMPRA</button>
+      </div>
     </div>
-
   
-  <div class="col-8">
-  </div>
-  <div class="col-4">
-    <button type="submit" class=" btn btn-danger">FINALIZAR COMPRA</button>
-  </div>
 </div>
 </div>
 
