--- a/cart.html
+++ b/cart.html
@@ -27,6 +27,16 @@
         font-size: 3.5rem;
       }
     }
+
+    #ingresarCedula::-webkit-inner-spin-button, 
+    #ingresarCedula::-webkit-outer-spin-button { 
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    margin: 0; 
+    }
+
+
   </style>
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
@@ -58,7 +68,7 @@
 <div class="container list-group-item bg-light" id="cartContainer"></div>
 
 <div class="list-group-item bg-light">
-<div class="row mt-5">
+<div class="row mt-3">
 
   <div class="col-8 bg-light">
     <div class="list-group-item">
@@ -72,14 +82,32 @@
          <div class="bg-light">
            <div class="list-group-item">
              <h5>Método de pago</h5>
-             
-             <input type="radio"> Visa 
-             <br>
-             <input type="radio"> Mastercard 
-             <br>
-             <input type="radio">  Paypal 
-             <br>
-             <input type="radio">  Efectivo
+             <div class="col">
+              <div class="form-check">
+                <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
+                <label class="form-check-label" for="exampleRadios1">
+                  Visa
+                </label>
+              </div>
+              <div class="form-check">
+                <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2">
+                <label class="form-check-label" for="exampleRadios2">
+                  Mastercard
+                </label>
+              </div>
+              <div class="form-check">
+                <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios3" value="option3">
+                <label class="form-check-label" for="exampleRadios3">
+                  Paypal
+                </label>
+              </div>
+              <div class="form-check">
+                <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios4" value="option4">
+                <label class="form-check-label" for="exampleRadios4">
+                  Efectivo
+                </label>
+              </div>
+             </div>
            </div>
           </div>
   </div>
@@ -95,11 +123,159 @@
         <div class="col-12 list-group-item">TOTAL</div>
       </div>
       <div class="py-2">
-        <button type="submit" class=" btn btn-danger">FINALIZAR COMPRA</button>
+        <button type="button" class="btn btn-danger btn-lg btn-block" data-toggle="modal" data-target="#myModal">FINALIZAR COMPRA</button>
       </div>
     </div>
-  
 </div>
+</div>
+
+
+<!-- Modal con la sección Finalizar compra:  -->
+<div class="modal fade" id="myModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Finalizar compra</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+
+
+        <div id="accordion">
+          <div class="card">
+            <div class="card-header" id="headingOne">
+              <h5 class="mb-0">
+                <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                  Ingrese su Dirección y otros Datos de envío
+                </button>
+              </h5>
+            </div>
+            <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+              <div class="card-body">
+
+
+                <form>
+                  <p class="text-muted">
+                    Información personal
+                  </p>
+                  <div class="row">
+                  <div class="form-group col-6">
+                    <label for="ingresarNombre">Nombre</label>
+                    <input type="text" class="form-control" id="ingresarNombre" placeholder="Ingrese su nombre">
+                  </div>
+                  <div class="form-group col-6">
+                    <label for="ingresarApellido">Apellido</label>
+                    <input type="text" class="form-control" id="ingresarApellido" placeholder="Ingrese su apellido">
+                  </div>
+                  </div>
+
+                  <div class="row">
+                  <div class="form-group col-6">
+                    <label for="ingresarCedula">Cedula de Identidad</label>
+                    <!-- utilizando el id en css, removí las arrow de este input number -->
+                    <input type="number" class="form-control" id="ingresarCedula" minlength="8" maxlength="8" placeholder="Ingrese su documento">
+                  </div>
+                  <div class="form-group col-6">
+                    <label for="example-date-input">Fecha de nacimiento</label>
+                    <input class="form-control" type="date" value="aaaa-mm-dd" id="example-date-input">
+                  </div>
+                  </div>
+
+                  <hr>
+                  <p class="text-muted">
+                    Ubicación
+                  </p>
+
+                  <div class="row">
+                    <div class="form-group col-9">
+                      <label for="ingresarDireccion">Dirección</label>
+                      <input type="text" class="form-control" id="ingresarDireccion" placeholder="Ingrese una dirección">
+                    </div>
+                    <div class="form-group col-md-3">
+                      <label for="ingresarCPostal">Código postal</label>
+                      <input type="text" class="form-control" id="ingresarCPostal" placeholder="Ingrese CP">
+                    </div>
+                  </div>
+
+                  <div class="row">
+                    <div class="form-group col-6">
+                      <label for="inputState">Departamento</label>
+                      <select id="inputState" class="form-control">
+                        <option selected>Seleccione departamento...</option>
+                        <option>...</option>
+                      </select>
+                    </div>
+                    <div class="form-group col-6">
+                      <label for="ingresarTelefono">Teléfono</label>
+                      <div class="input-group mb-2 mr-sm-2">
+                      <div class="input-group-prepend">
+                        <div class="input-group-text">+598</div>
+                      </div>
+                      <input type="tel" class="form-control" id="ingresarTelefono" maxlength="9" pattern="[0-9]{9}" placeholder="Ingrese su teléfono">
+                    </div>
+                    </div>
+                  </div>
+                
+                  <button type="submit" class="btn btn-danger">Confirmar</button>
+                </form>
+
+
+
+              </div>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="card-header" id="headingTwo">
+              <h5 class="mb-0">
+                <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                  Metodo de envío
+                </button>
+              </h5>
+            </div>
+            <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
+              <div class="card-body">
+                ...
+              </div>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="card-header" id="headingThree">
+              <h5 class="mb-0">
+                <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                  Información de pago
+                </button>
+              </h5>
+            </div>
+            <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
+              <div class="card-body">
+                ...
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+
+
+
+
+
+
+
+        <!-- <div class="container">
+          <div class="row" id="modal"></div>
+        </div> -->
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+        <button type="button" class="btn btn-danger">Comprar</button>
+      </div>
+    </div>
+  </div>
 </div>
 
 
