--- a/guardar.html
+++ b/guardar.html
@@ -62,3 +62,35 @@
 
 
     <script src="js/guardar.js"></script>
+
+
+
+
+
+///////////////////////////////////////
+
+
+    <div class="form-check">
+      <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
+      <label class="form-check-label" for="exampleRadios1">
+        Visa
+      </label>
+    </div>
+    <div class="form-check">
+      <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2">
+      <label class="form-check-label" for="exampleRadios2">
+        Mastercard
+      </label>
+    </div>
+    <div class="form-check">
+      <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios3" value="option3">
+      <label class="form-check-label" for="exampleRadios3">
+        Paypal
+      </label>
+    </div>
+    <div class="form-check">
+      <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios4" value="option4">
+      <label class="form-check-label" for="exampleRadios4">
+        Efectivo
+      </label>
+    </div>
