--- a/guardar.html
+++ b/guardar.html
@@ -94,3 +94,71 @@
         Efectivo
       </label>
     </div>
+
+
+
+
+
+
+    <!-- MODAL -->
+
+    //Cargar el JSON en el modal
+
+var data = {};
+
+function showModal(array){
+
+    let htmlContentToAppend = "";
+    for(let i = 0; i < array["articles"].length; i++){
+        let art = array["articles"][i];
+
+        htmlContentToAppend += `
+
+        <div class="row justify-content-end">
+          <small class="col-md-offset-11 col-md-1 mr-3" style="color: red;">Eliminar</small>
+        </div>
+        <div class="row mb-3">
+              <img src="` + art.src +`" class="img-thumbnail col-2" alt="foto`+i+`">
+
+               <div class="col-6 list-group-item">
+                  <h4>`+ art.name + `</h4>
+                   <div class="row py-1">
+                     <div class="col-6 col-sm-9">
+                        <p class="text-muted">Descripción</p>
+                     </div>
+                     <div class="col-6 col-sm-3">
+                        <p class="text-muted">Cantidad</p>
+                        <input class="col-md-8" onload="recibirInput()" type="number" id="mostrar`+i+`" name="cantidad" min="1" placeholder="`+ art.count +`">   
+                     </div>
+                   </div>
+                </div>
+         
+           <div class="col-2 list-group-item">
+                  <h5 class="text-center">Valor unitario</h5>
+               <div class="py-4 ml-4">
+                 <span>`+ art.unitCost + `</span>
+                 <span>`+ art.currency + `</span>
+               </div>
+            </div>
+
+           <div class="col-2 list-group-item"> 
+              <h5 class="text-center">Total</h5>
+              <div class="py-4 ml-4">
+              <span id="parr`+i+`">` + art.count*art.unitCost +`</span>
+              <span id="curren`+i+`">`+ art.currency + `</span>
+              </div>
+           </div> 
+     </div>
+        `
+    }
+    document.getElementById("modal").innerHTML = htmlContentToAppend;
+}
+
+
+
+// Función para mandar el valor del input al modal, en la sección cantidad
+
+function recibirInput(){
+   var valor = document.getElementById("input"+i).value;
+   document.getElementById("mostrar"+i).value = valor;
+}
