--- a/cart.html
+++ b/cart.html
@@ -146,7 +146,7 @@
         </div>
       </div>
       <div class="py-2">
-        <button type="button" onclick="abrirModal()" id="confirm" class="btn btn-danger btn-lg btn-block disabled">FINALIZAR COMPRA</button>
+        <button type="button" id="confirm" class="btn btn-danger btn-lg btn-block disabled">FINALIZAR COMPRA</button>
       </div>
     </div>
 </div>
@@ -264,8 +264,23 @@
                         <option selected value="nada" >Seleccione departamento...</option>
                         <option value="algo">Artigas</option>
                         <option value="algo">Canelones</option>
-                        <option value="algo">Montevideo</option>
+                        <option value="algo">Cerro Largo</option>
+                        <option value="algo">Colonia</option>
+                        <option value="algo">Durazno</option>
+                        <option value="algo">Flores</option>
+                        <option value="algo">Florida</option>
+                        <option value="algo">Lavalleja</option>
                         <option value="algo">Maldonado</option>
+                        <option value="algo">Montevideo</option>
+                        <option value="algo">Paysandú</option>
+                        <option value="algo">Río Negro</option>
+                        <option value="algo">Rivera</option>
+                        <option value="algo">Rocha</option>
+                        <option value="algo">Salto</option>
+                        <option value="algo">San José</option>
+                        <option value="algo">Soriano</option>
+                        <option value="algo">Tacuarembó</option>
+                        <option value="algo">Treinta y Tres</option>
                       </select>
                       <div name="error">
                       <small id="error-select" class="mostrar-error" style="color: red;">*Debe ingresar un departamento*</small>
@@ -337,7 +352,7 @@
     
         <!-- Modal -->
         <div class="modal fade" id="finalModal" tabindex="-1" role="dialog" aria-labelledby="modalLabel" aria-hidden="true">
-          <div class="modal-dialog modal-dialog-centered" role="document">
+          <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
             <div class="modal-content">
               <div class="modal-header">
                 <h5 class="modal-title" id="modalLabel">Modal title</h5>
