--- a/copiaprod.html
+++ b/copiaprod.html
@@ -77,10 +77,17 @@
         </div>
     </div>
 
-    <div class="container">
-      <div class="card-deck my-5" id="prod-list-container"></div>
-  </div>
+      <!-- <div class="container">
+        <div class="row">
+          <a href="product-info.html" class="card mb-4 shadow-sm custom-card"></a>
+          <div class="list-group" id="prod-list-container">
+          </div>
+        </div>
+      </div> -->
 
+      <div class="container">
+          <div class="card-deck my-5" id="prod-list-container"></div>
+      </div>
     </main>
     <footer class="text-muted bg-light">
       <div class="container">
@@ -95,7 +102,7 @@
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/init.js"></script>
-    <script src="js/products2.js"></script>
+    <script src="js/copiaprod.js"></script>
     <script src="js/login.js"></script>
   </body>
 </html>
